fix: rename reward endpoint to rewards
