# node-registrar/pkg/server/handlers.go
@@ -290,7 +290,7 @@ func (s Server) getNodeHandler(c *gin.Context) {
 // @Success 200 {object} Reward "Rewards details with the node uptime percentage"
 // @Failure 400 {object} map[string]any "Invalid node ID"
 // @Failure 404 {object} map[string]any "Node not found"
-// @Router /nodes/{node_id}/reward [get]
+// @Router /nodes/{node_id}/rewards [get]
 func (s Server) getNodeRewardHandler(c *gin.Context) {
 	nodeID := c.Param("node_id")
 
@@ -326,6 +326,7 @@ func (s Server) getNodeRewardHandler(c *gin.Context) {
 	rewards, err := CalculateMonthlyReward(node.Resources, upTimePercentage)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
 	}
 	c.JSON(http.StatusOK, rewards)
 }
