# node-registrar/pkg/server/routes.go
@@ -41,7 +41,7 @@ func (s *Server) registerRoutes(r *gin.RouterGroup) {
 	publicNodeRoutes := r.Group("nodes")
 	publicNodeRoutes.GET("", s.listNodesHandler)
 	publicNodeRoutes.GET("/:node_id", s.getNodeHandler)
-	publicNodeRoutes.GET("/:node_id/reward", s.getNodeRewardHandler)
+	publicNodeRoutes.GET("/:node_id/rewards", s.getNodeRewardHandler)
 	// protected by node key
 	protectedNodeRoutes := r.Group("nodes", s.AuthMiddleware())
 	protectedNodeRoutes.POST("", s.registerNodeHandler)
